# devya

./: .gitignore  .prettierignore  components.d.ts  components.json  eslint.config.js  lefthook.yaml  lefthook.yml  lint-staged.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.json  typed-router.d.ts  vite.config.ts
.husky/: pre-commit
src/: App.vue  main.ts  theme.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Makefile.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/certs/: myCA.key  myCA.pem
src-tauri/db-service/: Cargo.toml
src-tauri/db-service/src/: lib.rs  rule_dir.rs  rule_file.rs
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: lib.rs  prelude.rs  rule_dir.rs  rule_file.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20250525_000001_create_rule_dir_table.rs  m20250528_152713_create_rule_dir_and_rule_file.rs
src-tauri/src/: commands.rs  handler.rs  lib.rs  main.rs  pingora.rs  proxy.rs  state.rs  util.rs  utils.rs
src-tauri/src/commands/: cert.rs  db.rs  mod.rs  proxy.rs  utils.rs
src-tauri/src/mitm/: cert.rs  mod.rs  proxy.rs  proxy_test.rs
src-tauri/src/plugins/proxy/: mitm.rs  mod.rs
src/assets/: base.css  prime.scss
src/commands/: index.ts  types.ts
src/components/: AppSidebar.vue  BottomBar.vue  ContentCard.vue  PanelCard.vue  PortInput.vue  RuleEditor.vue  RuleFileTree.vue  Sidebar.vue  TitleBar.vue  WindowControls.vue
src/components/ui/button/: Button.vue
src/components/ui/dialog/: DialogContent.vue  DialogDescription.vue  DialogHeader.vue  DialogScrollContent.vue  DialogTitle.vue
src/components/ui/input/: Input.vue
src/components/ui/label/: Label.vue
src/components/ui/number-field/: NumberField.vue  NumberFieldContent.vue  NumberFieldDecrement.vue  NumberFieldIncrement.vue  NumberFieldInput.vue
src/components/ui/pin-input/: PinInput.vue  PinInputGroup.vue  PinInputInput.vue
src/components/ui/popover/: PopoverContent.vue
src/components/ui/resizable/: ResizableHandle.vue  ResizablePanelGroup.vue
src/components/ui/scroll-area/: ScrollArea.vue  ScrollBar.vue
src/components/ui/separator/: Separator.vue
src/components/ui/sheet/: SheetContent.vue  SheetDescription.vue  SheetFooter.vue  SheetHeader.vue  SheetTitle.vue  index.ts
src/components/ui/sidebar/: Sidebar.vue  SidebarContent.vue  SidebarFooter.vue  SidebarGroup.vue  SidebarGroupAction.vue  SidebarGroupContent.vue  SidebarGroupLabel.vue  SidebarHeader.vue  SidebarInput.vue  SidebarInset.vue  SidebarMenu.vue  SidebarMenuAction.vue  SidebarMenuBadge.vue  SidebarMenuButton.vue  SidebarMenuButtonChild.vue  SidebarMenuItem.vue  SidebarMenuSkeleton.vue  SidebarMenuSub.vue  SidebarMenuSubButton.vue  SidebarProvider.vue  SidebarRail.vue  SidebarSeparator.vue  SidebarTrigger.vue
src/components/ui/skeleton/: Skeleton.vue
src/components/ui/sonner/: Sonner.vue
src/components/ui/switch/: Switch.vue
src/components/ui/table/: Table.vue  TableBody.vue  TableCaption.vue  TableCell.vue  TableEmpty.vue  TableFooter.vue  TableHead.vue  TableHeader.vue  TableRow.vue
src/components/ui/tooltip/: TooltipContent.vue
src/const/: index.ts  tauri-event.ts
src/events/: index.ts  types.ts
src/hooks/: use-settings.ts
src/ipc/commands/: index.ts  types.ts
src/pages/: index.vue  network.vue  rules.vue  settings.vue
src/pages/network/: index.vue
src/pages/rules/: index.vue
src/pages/settings/: index.vue
src/stores/: network.ts  proxy.ts
src/types/: command.ts
src/utils/: error.ts  pinia.ts
src/volt/: Button.vue  DataTable.vue  Divider.vue  SecondaryButton.vue  ToggleSwitch.vue
