[package]
name = "devya"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "devya_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http-mitm-proxy = "0.10.0"
tokio = { version = "1.41.1", features = ["full"] }
rcgen = { version = "0.13.1", features = ["x509-parser"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
moka = "0.12.8"
hyper = "1.5.0"
home = "0.5.9"
async-trait = "0.1.83"
tracing = "0.1.40"

