[workspace]
members = [".", "entity", "migration", "db-service"]

[package]
name = "devya"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "devya_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rcgen = { version = "0.13.2", features = ["x509-parser"] }
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["fs", "macros"] }
hyper = { version = "1" }
rustls = "0.23"
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
trait-variant = "0.1"
flate2 = "1"
quick_cache = "0.6.13"
hyper-rustls = { version = "0.27.5", features = ["webpki-roots", "http2"] }
time = "0.3.41"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
migration = { path = "migration" }
db-service = { path = "db-service" }
entity = { path = "entity" }
tauri-plugin-dialog = "2"
